# AutoWolf

./: .gitignore  AutoWolf.cbp  CMakeLists.txt  Changes.txt  CheckSum.cpp  CheckSum.h  DataFile.cpp  DataFile.h  Dictionary.cpp  Dictionary.h  DictionaryFile.cpp  DictionaryFile.h  DirectoryFile.cpp  DirectoryFile.h  Exception.cpp  Exception.h  ExploredArrayFile.cpp  ExploredArrayFile.h  HistoryRatio.cpp  HistoryRatio.h  LinkList.cpp  LinkList.h  List.h  Makefile  Makefile.dc  Makefile.osx  MasterDirectoryFile.cpp  MasterDirectoryFile.h  ObjectSet.cpp  ObjectSet.h  PString.cpp  PString.h  PathArray.cpp  PathArray.h  Property.cpp  Property.h  PropertyFile.cpp  PropertyFile.h  README.md  README.rtf  (+83 more)
.github/workflows/: build.yml
AutoWolf-Android/: .project  AndroidManifest.xml  autowolf.keystore  project.properties
AutoWolf-Android/jni/: Application.mk
AutoWolf-Android/jni/SDL/src/main/android/: SDL_android_main.c
AutoWolf-Android/jni/SDL_mixer/: Android.mk
AutoWolf-Android/res/drawable/: background.xml  rounded_black_rect.xml
AutoWolf-Android/res/layout/: activity_finder.xml  main.xml
AutoWolf-Android/res/values/: colors.xml  strings.xml
AutoWolf-Android/src/com/ichera/autowolf/: FinderActivity.java  MainActivity.java  Util.java
AutoWolf-Android/src/org/libsdl/app/: DummyEdit.java  SDLActivity.java  SDLGenericMotionListener_API12.java  SDLInputConnection.java  SDLJoystickHandler.java  SDLJoystickHandler_API12.java  SDLMain.java  SDLSurface.java
AutoWolf-iOS/AutoWolf-iOS/: AppDelegate.h  AppDelegate.m  AutoWolf-iOS-Info.plist  LauncherViewController.h  LauncherViewController.m  main.m
AutoWolf-iOS/AutoWolf-iOS.xcodeproj/: project.pbxproj
AutoWolf-iOS/AutoWolf-iOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AutoWolf-iOS/AutoWolf-iOSTests/: AutoWolf-iOSTests-Info.plist  AutoWolf_iOSTests.m
DOS/wolfsrc/: ID_US.H  IOAN_BAS.C  IOAN_BAS.H  IOAN_BOT.C  IOAN_BOT.H  WL_DEF.H  WL_GAME.C  WL_INTER.C  WL_PLAY.C  WOLF3D.DSK  WOLF3D.PRJ  WOLF3D.SYM
dc/: dc_main.cpp  dc_vmu.cpp
docs/: AUTHORS.txt  PRIVACY-POLICY.md  README-DEVELOPER.txt  README.rtf  README.txt  classtable.xlsx
dosbox/: dbopl.cpp  dbopl.h
include/SDL/: SDL_config.h
macosx/: CocoaFun.mm  Info.plist  SDLMain.m  classtables.numbers  exepack.sh  gamemaps_activision_addresses.txt
macosx/English.lproj/: InfoPlist.strings
macosx/Wolf4SDL-osx106.xcodeproj/: project.pbxproj
macosx/Wolf4SDL.xcodeproj/: macbook.mode1v3  macbook.pbxuser  macbook.perspectivev3  project.pbxproj
macosx/Wolf4SDL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macosx/Wolf4SDL.xcodeproj/project.xcworkspace/xcshareddata/: Wolf4SDL.xccheckout
macosx/frameworks/SDL.framework/Versions/A/Headers/: SDL_syswm.h
mame/: fmopl.cpp
script/: exepack.sh
src/: ActorStates.cpp  ActorStates.h  Android.mk  CheckSum.cpp  CheckSum.h  CommandLine.cpp  CommandLine.h  Config.cpp  Config.h  DataFile.cpp  DataFile.h  DirectoryFile.cpp  DirectoryFile.h  Exception.cpp  Exception.h  FileSystem.cpp  FileSystem.h  HistoryRatio.cpp  HistoryRatio.h  List.h  Logger.cpp  Logger.h  MapExploration.cpp  MapExploration.h  MasterDirectoryFile.cpp  MasterDirectoryFile.h  OutOfRangeException.cpp  OutOfRangeException.h  PString.cpp  PString.h  PathArray.cpp  PathArray.h  Platform.cpp  Platform.h  Point2D.cpp  Point2D.h  Property.cpp  Property.h  PropertyFile.cpp  PropertyFile.h  (+95 more)
src/dc/: dc_main.cpp  dc_vmu.cpp
src/dosbox/: dbopl.cpp  dbopl.h
src/macosx/: CocoaFun.h  CocoaFun.mm  SDLMain.m
src/win32/: sdl_winmain.cpp
tools/starter/osx/AutoWolfStarter/: AppDelegate.h  AppDelegate.m  AutoWolfStarter-Info.plist  AutoWolfStarter-Prefix.pch  main.m
tools/starter/osx/AutoWolfStarter.xcodeproj/: project.pbxproj
tools/starter/osx/AutoWolfStarter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tools/starter/osx/AutoWolfStarter/en.lproj/: Credits.rtf  MainMenu.xib
tools/starter/windows/AutoWolfStarter/: ApplicationSettings.cs  AutoWolfStarter.csproj  AutoWolfStarter.sln  Form1.Designer.cs  Form1.cs  Program.cs
tools/starter/windows/AutoWolfStarter/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
vs2010/autowolf/: autowolf.sln  autowolf.vcxproj  autowolf.vcxproj.filters
vs2012/autowolf/: autowolf.sln  autowolf.vcxproj  autowolf.vcxproj.filters
vs2013/autowolf/: autowolf.sln  autowolf.vcxproj  autowolf.vcxproj.filters
vs2017/autowolf/: autowolf.vcxproj  autowolf.vcxproj.filters
win/: Wolf4SDL.rc  resource.h
